@@ -79,6 +79,7 @@ Changes in Bitbake 1.9.x:
 	  faster at the expense of not creating mirror tarballs.
 	- SRCREV handling updates, improvements and fixes from Poky
 	- Add bb.utils.lockfile() and bb.utils.unlockfile() from Poky
+	- Add support for task selfstamp and lockfiles flags
 
 Changes in Bitbake 1.8.0:
 	- Release 1.7.x as a stable series
